# docs/swagger.json
@@ -537,6 +537,12 @@
                 "name": {
                     "type": "string"
                 },
+                "participant_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
+                },
                 "type": {
                     "type": "string"
                 }
@@ -623,6 +629,12 @@
             "properties": {
                 "name": {
                     "type": "string"
+                },
+                "participant_ids": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
+                    }
                 },
                 "type": {
                     "$ref": "#/definitions/models.ChatRoomType"
